--- a/Hippo/InternalClasses/Module/CreatePayment/Resources/CreatePaymentViewController.xib
+++ b/Hippo/InternalClasses/Module/CreatePayment/Resources/CreatePaymentViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,47 +12,49 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <viewController restorationIdentifier="CreatePaymentViewController" id="6U1-F1-GyG" customClass="CreatePaymentViewController" customModule="Hippo" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="gLD-UJ-CBo">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRf-o5-fTx" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="lTJ-Y3-tAO"/>
+                        </constraints>
+                    </view>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mnX-WY-ewq">
-                        <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                        <rect key="frame" x="0.0" y="50" width="414" height="724"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tableView>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_loader_shape" translatesAutoresizingMaskIntoConstraints="NO" id="QPP-JD-Dfv" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="187" y="428" width="40" height="40"/>
+                        <rect key="frame" x="187" y="384" width="40" height="40"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="mnX-WY-ewq" firstAttribute="leading" secondItem="TfS-rD-WMC" secondAttribute="leading" id="6ft-PL-fVc"/>
-                    <constraint firstItem="mnX-WY-ewq" firstAttribute="top" secondItem="TfS-rD-WMC" secondAttribute="top" id="VC1-r6-YXP"/>
+                    <constraint firstItem="TfS-rD-WMC" firstAttribute="trailing" secondItem="fRf-o5-fTx" secondAttribute="trailing" id="FRK-Es-NMv"/>
+                    <constraint firstItem="mnX-WY-ewq" firstAttribute="top" secondItem="fRf-o5-fTx" secondAttribute="bottom" id="HaG-ua-ZHn"/>
+                    <constraint firstItem="fRf-o5-fTx" firstAttribute="top" secondItem="TfS-rD-WMC" secondAttribute="top" id="WTW-bG-dWW"/>
                     <constraint firstItem="TfS-rD-WMC" firstAttribute="bottom" secondItem="mnX-WY-ewq" secondAttribute="bottom" id="Z6W-OZ-ItB"/>
                     <constraint firstItem="TfS-rD-WMC" firstAttribute="trailing" secondItem="mnX-WY-ewq" secondAttribute="trailing" id="boX-hU-wtD"/>
                     <constraint firstItem="QPP-JD-Dfv" firstAttribute="centerX" secondItem="gLD-UJ-CBo" secondAttribute="centerX" id="gzG-jy-lTV"/>
+                    <constraint firstItem="fRf-o5-fTx" firstAttribute="leading" secondItem="TfS-rD-WMC" secondAttribute="leading" id="pkp-ts-vlh"/>
                     <constraint firstItem="QPP-JD-Dfv" firstAttribute="centerY" secondItem="gLD-UJ-CBo" secondAttribute="centerY" id="tfC-SV-ttw"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="TfS-rD-WMC"/>
             </view>
-            <navigationItem key="navigationItem" title="Title" id="Z5K-nj-Q0r">
-                <barButtonItem key="leftBarButtonItem" image="whiteBackButton" id="GpU-hb-CyC">
-                    <connections>
-                        <action selector="backButtonAction:" destination="6U1-F1-GyG" id="KER-bi-YIo"/>
-                    </connections>
-                </barButtonItem>
-            </navigationItem>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <connections>
-                <outlet property="backButton" destination="GpU-hb-CyC" id="F02-3m-bi3"/>
                 <outlet property="loaderView" destination="QPP-JD-Dfv" id="J3a-nN-c1F"/>
                 <outlet property="tableView" destination="mnX-WY-ewq" id="ijC-k6-T2O"/>
+                <outlet property="view_Navigation" destination="fRf-o5-fTx" id="V4o-5t-5Kh"/>
             </connections>
-            <point key="canvasLocation" x="92" y="-61"/>
+            <point key="canvasLocation" x="91.304347826086968" y="-61.607142857142854"/>
         </viewController>
     </objects>
     <resources>
         <image name="app_loader_shape" width="40" height="40"/>
-        <image name="whiteBackButton" width="22" height="14"/>
     </resources>
 </document>
