--- a/Hippo/InternalClasses/Module/PaymentPlan/Resources/PaymentPlansViewController.xib
+++ b/Hippo/InternalClasses/Module/PaymentPlan/Resources/PaymentPlansViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,51 +12,49 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <viewController restorationIdentifier="PaymentPlansViewController" id="x5b-LQ-9Xq" customClass="PaymentPlansViewController" customModule="Hippo" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="SAB-4A-Lgn">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WKR-3M-p7x" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="nc5-33-yX7"/>
+                        </constraints>
+                    </view>
                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sNO-xD-qVg">
-                        <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                        <rect key="frame" x="0.0" y="50" width="414" height="724"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tableView>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_loader_shape" translatesAutoresizingMaskIntoConstraints="NO" id="23C-a8-sF3" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="187" y="428" width="40" height="40"/>
+                        <rect key="frame" x="187" y="384" width="40" height="40"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="sNO-xD-qVg" firstAttribute="leading" secondItem="dG9-Sb-TWs" secondAttribute="leading" id="2CM-gJ-ikn"/>
-                    <constraint firstItem="sNO-xD-qVg" firstAttribute="top" secondItem="dG9-Sb-TWs" secondAttribute="top" id="JB2-F7-hmn"/>
                     <constraint firstItem="dG9-Sb-TWs" firstAttribute="trailing" secondItem="sNO-xD-qVg" secondAttribute="trailing" id="MbO-6A-jvv"/>
                     <constraint firstItem="dG9-Sb-TWs" firstAttribute="bottom" secondItem="sNO-xD-qVg" secondAttribute="bottom" id="QcA-AT-yPj"/>
+                    <constraint firstItem="WKR-3M-p7x" firstAttribute="top" secondItem="dG9-Sb-TWs" secondAttribute="top" id="RNE-fn-aZL"/>
+                    <constraint firstItem="WKR-3M-p7x" firstAttribute="leading" secondItem="dG9-Sb-TWs" secondAttribute="leading" id="XOp-JC-Nr4"/>
                     <constraint firstItem="23C-a8-sF3" firstAttribute="centerY" secondItem="SAB-4A-Lgn" secondAttribute="centerY" id="nZc-2g-5Ey"/>
                     <constraint firstItem="23C-a8-sF3" firstAttribute="centerX" secondItem="SAB-4A-Lgn" secondAttribute="centerX" id="qdU-8P-7Ba"/>
+                    <constraint firstItem="sNO-xD-qVg" firstAttribute="top" secondItem="WKR-3M-p7x" secondAttribute="bottom" id="tZT-T0-vF7"/>
+                    <constraint firstItem="dG9-Sb-TWs" firstAttribute="trailing" secondItem="WKR-3M-p7x" secondAttribute="trailing" id="vXh-dB-ERQ"/>
                 </constraints>
                 <viewLayoutGuide key="safeArea" id="dG9-Sb-TWs"/>
             </view>
-            <navigationItem key="navigationItem" title="Title" id="pdo-zZ-av3">
-                <barButtonItem key="leftBarButtonItem" title="Item" image="cancel_icon" style="plain" id="GUz-Ib-c5h">
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="image" keyPath="ImageNoRender" value="cancel_btn_navigation_bar"/>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="cancelButtonClicked:" destination="x5b-LQ-9Xq" id="cKm-Pa-sV6"/>
-                    </connections>
-                </barButtonItem>
-            </navigationItem>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <connections>
-                <outlet property="cancelButton" destination="GUz-Ib-c5h" id="gFQ-4h-HnX"/>
                 <outlet property="loaderView" destination="23C-a8-sF3" id="yVa-Lk-rAC"/>
                 <outlet property="tableView" destination="sNO-xD-qVg" id="aD8-ff-1XI"/>
+                <outlet property="view_Navigation" destination="WKR-3M-p7x" id="VUO-Tt-6QX"/>
             </connections>
             <point key="canvasLocation" x="-84" y="423"/>
         </viewController>
     </objects>
     <resources>
         <image name="app_loader_shape" width="40" height="40"/>
-        <image name="cancel_btn_navigation_bar" width="14" height="14"/>
-        <image name="cancel_icon" width="16" height="16"/>
     </resources>
 </document>
