unread issues fixed

--- a/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/PromotionTableViewCell/PromotionTableViewCell.xib
@@ -20,6 +20,12 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xud-Uu-5dH">
                         <rect key="frame" x="8" y="2" width="303" height="110"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ey-sI-pmH">
+                                <rect key="frame" x="10" y="95" width="283" height="0.0"/>
+                                <connections>
+                                    <action selector="action_PreviewImage" destination="KGk-i7-Jjw" eventType="touchUpInside" id="gy9-Va-Fu0"/>
+                                </connections>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="B24-ZH-lMi">
                                 <rect key="frame" x="10" y="95" width="283" height="0.0"/>
                                 <constraints>
@@ -77,6 +83,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Fcn-By-Hj8" firstAttribute="centerY" secondItem="whS-wa-wq1" secondAttribute="centerY" id="0e4-U2-mJt"/>
+                            <constraint firstItem="0ey-sI-pmH" firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" id="111-Mx-oBo"/>
                             <constraint firstItem="whS-wa-wq1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="10" id="37B-9D-cYD"/>
                             <constraint firstItem="WhG-y0-qES" firstAttribute="leading" secondItem="Xud-Uu-5dH" secondAttribute="leading" constant="15" id="4Fp-Qh-kG9"/>
                             <constraint firstItem="WhG-y0-qES" firstAttribute="top" secondItem="Xud-Uu-5dH" secondAttribute="top" constant="15" id="77e-BE-OLr"/>
@@ -85,8 +92,11 @@
                             <constraint firstItem="Fcn-By-Hj8" firstAttribute="leading" secondItem="P9E-VN-wq9" secondAttribute="leading" id="Ncb-wT-WQW"/>
                             <constraint firstAttribute="bottom" secondItem="B24-ZH-lMi" secondAttribute="bottom" constant="15" id="Ort-tg-0bd"/>
                             <constraint firstItem="Fcn-By-Hj8" firstAttribute="top" secondItem="WhG-y0-qES" secondAttribute="bottom" constant="10" id="RZD-eq-Pqh"/>
+                            <constraint firstItem="0ey-sI-pmH" firstAttribute="leading" secondItem="B24-ZH-lMi" secondAttribute="leading" id="Zuj-3Y-VNH"/>
+                            <constraint firstItem="0ey-sI-pmH" firstAttribute="bottom" secondItem="B24-ZH-lMi" secondAttribute="bottom" id="fdH-kt-VUx"/>
                             <constraint firstItem="B24-ZH-lMi" firstAttribute="top" secondItem="Fcn-By-Hj8" secondAttribute="bottom" constant="7" id="iSY-uc-gbl"/>
                             <constraint firstAttribute="trailing" secondItem="B24-ZH-lMi" secondAttribute="trailing" constant="10" id="lXU-Eb-wX2"/>
+                            <constraint firstItem="0ey-sI-pmH" firstAttribute="top" secondItem="B24-ZH-lMi" secondAttribute="top" id="pQX-2h-Z9Q"/>
                             <constraint firstAttribute="trailing" secondItem="whS-wa-wq1" secondAttribute="trailing" constant="10" id="tEu-lw-dKX"/>
                         </constraints>
                     </view>
