--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -739,6 +739,7 @@
                     </view>
                     <connections>
                         <outlet property="backgroundBlackColorView" destination="9Cx-lZ-GRJ" id="H4j-M8-EkJ"/>
+                        <outlet property="constraint_headerheight" destination="V6g-Ir-bfO" id="lzD-1X-6Nc"/>
                         <outlet property="crossButton" destination="Wpa-3a-4N0" id="PCv-4d-2Np"/>
                         <outlet property="downloadButton" destination="Z43-MJ-DCV" id="YWT-dZ-x0t"/>
                         <outlet property="imageView" destination="vvN-Gl-BZQ" id="1tv-44-fat"/>
@@ -1776,30 +1777,9 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxj-by-MDK" userLabel="HeaderView" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44" width="375" height="50"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgz-wq-nfP">
-                                        <rect key="frame" x="46" y="4" width="283" height="46"/>
-                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                        <color key="textColor" red="0.26274509800000001" green="0.35686274509999999" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="11F-Bw-Ae4">
-                                        <rect key="frame" x="0.0" y="4" width="46" height="46"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="46" id="1PY-Ym-pTT"/>
-                                            <constraint firstAttribute="width" constant="46" id="qju-vt-xkL"/>
-                                        </constraints>
-                                    </button>
-                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="11F-Bw-Ae4" firstAttribute="leading" secondItem="Oxj-by-MDK" secondAttribute="leading" id="1qh-gV-OdT"/>
-                                    <constraint firstItem="Sgz-wq-nfP" firstAttribute="height" secondItem="11F-Bw-Ae4" secondAttribute="height" id="4aV-ia-cuV"/>
-                                    <constraint firstAttribute="bottom" secondItem="11F-Bw-Ae4" secondAttribute="bottom" id="Boc-sC-rkU"/>
-                                    <constraint firstItem="Sgz-wq-nfP" firstAttribute="leading" secondItem="11F-Bw-Ae4" secondAttribute="trailing" id="E2G-aM-jCR"/>
                                     <constraint firstAttribute="height" constant="50" id="QYJ-oy-WVu"/>
-                                    <constraint firstAttribute="bottom" secondItem="Sgz-wq-nfP" secondAttribute="bottom" id="R4l-sQ-B3b"/>
-                                    <constraint firstAttribute="trailing" secondItem="Sgz-wq-nfP" secondAttribute="trailing" constant="46" id="oVA-Me-LKw"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Mb-TI-CqX" userLabel="errorContentView">
